--- a/src/diagrams2.tex
+++ b/src/diagrams2.tex
@@ -1,75 +1,155 @@
 \section{Физическое кодирование}
 \subsection{NRZ}
 \includegraphics[width=\textwidth]{2nrz}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        500.0 & 100.0 & 298.6 & 3400.0 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=1.0$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=5.0$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 2=500.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 10=100.0$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 500.0\text{ МГц}-100.0\text{ МГц}=3400.0$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=66$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 33.0\div 110.0=300.0$ МГц
 
 \subsection{RZ}
 \includegraphics[width=\textwidth]{2rz}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        1000.0 & 500.0 & 995.5 & 6500.0 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=0.5$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=1.0$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 1=1000.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 2=500.0$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 1000.0\text{ МГц}-500.0\text{ МГц}=6500.0$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=220$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 110.0\div 110.0=1000.0$ МГц
 
 \subsection{AMI}
 \includegraphics[width=\textwidth]{2ami}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        500.0 & 200.0 & 448.0 & 3300.0 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=1.0$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=2.5$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 2=500.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 5=200.0$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 500.0\text{ МГц}-200.0\text{ МГц}=3300.0$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=99$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 49.5\div 110.0=450.0$ МГц
 
 \subsection{NRZI}
 \includegraphics[width=\textwidth]{2nrzi}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        500.0 & 142.9 & 298.6 & 3357.1 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=1.0$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=3.5$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 2=500.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 7=142.9$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 500.0\text{ МГц}-142.9\text{ МГц}=3357.1$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=66$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 33.0\div 110.0=300.0$ МГц
 
 \subsection{Манчестерский код}
 \includegraphics[width=\textwidth]{2manchester}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        1000.0 & 500.0 & 701.4 & 6500.0 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=0.5$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=1.0$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 1=1000.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 2=500.0$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 1000.0\text{ МГц}-500.0\text{ МГц}=6500.0$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=155$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 77.5\div 110.0=704.5$ МГц
 
 \subsection{Дифференциальный манчестерский код}
 \includegraphics[width=\textwidth]{2manchester_diff}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        1000.0 & 250.0 & 688.9 & 6750.0 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=0.5$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=2.0$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 1=1000.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 4=250.0$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 1000.0\text{ МГц}-250.0\text{ МГц}=6750.0$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=155$
+
+Время передачи сообщения: $T=112.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 77.5\div 112.0=692.0$ МГц
 
 \subsection{MLT-3}
 \includegraphics[width=\textwidth]{2mlt3}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        500.0 & 142.9 & 298.6 & 3357.1 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=1.0$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=3.5$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 2=500.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 7=142.9$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 500.0\text{ МГц}-142.9\text{ МГц}=3357.1$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=66$
+
+Время передачи сообщения: $T=110.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 33.0\div 110.0=300.0$ МГц
 
 \subsection{PAM-5}
 \includegraphics[width=\textwidth]{2pam5}
-\begin{center}
-    \begin{tabular}{cccc}
-        $f_\mathrm{\text{в}}$, МГц & $f_\mathrm{\text{н}}$, МГц & $f_\mathrm{\text{с}}$, МГц & $S$, МГц \\
-        500.0 & 166.7 & 378.4 & 3333.3 \\
-    \end{tabular}
-\end{center}
+
+Минимальный интервал (все сообщение): $t_\mathrm{min}=1.0$ битовых интервалов
+
+Максимальный интервал (все сообщение): $t_\mathrm{max}=3.0$ битовых интервалов
+
+Максимальная частота: $f_\mathrm{max}=C\div t_\mathrm{min}=1000.0\div 2=500.0$ МГц
+
+Минимальная частота: $f_\mathrm{min}=C\div t_\mathrm{max}=1000.0\div 6=166.7$ МГц
+
+Полоса пропускания: $S=7f_\mathrm{max}-f_\mathrm{min} = 7\cdot 500.0\text{ МГц}-166.7\text{ МГц}=3333.3$ МГц
+
+Количество интервалов с одинаковым уровнем (все сообщение): $n_\mathrm{similar}=42$
+
+Время передачи сообщения: $T=55.0$ битовых интервалов
+
+Среднее: $f_0\cdot n_\mathrm{similar}\div T=1000.0\text{ МГц}\cdot 21.0\div 55.0=381.8$ МГц
 
 \subsection{Выбор лучшего}
 \begin{center}
@@ -78,14 +158,14 @@
         & $f_\mathrm{\text{н}}$, МГц
         & $f_\mathrm{\text{с}}$, МГц
         & $S$, МГц \\ \hline
-        NRZ               &  500.0 & 100.0 & 298.6 & 3400.0 \\
-        RZ                & 1000.0 & 500.0 & 995.5 & 6500.0 \\
-        AMI               &  500.0 & 200.0 & 448.0 & 3300.0 \\
-        NRZI              &  500.0 & 142.9 & 298.6 & 3357.1 \\
-        Манчестерский код & 1000.0 & 500.0 & 701.4 & 6500.0 \\
-        Дифф. манч. код   & 1000.0 & 250.0 & 688.9 & 6750.0 \\
-        MLT-3             &  500.0 & 142.9 & 298.6 & 3357.1 \\
-        PAM-5             &  500.0 & 166.7 & 378.4 & 3333.3 \\
+        NRZ               &  500.0 & 100.0 &  300.0 & 3400.0 \\
+        RZ                & 1000.0 & 500.0 & 1000.0 & 6500.0 \\
+        AMI               &  500.0 & 200.0 &  450.0 & 3300.0 \\
+        NRZI              &  500.0 & 142.9 &  300.0 & 3357.1 \\
+        Манчестерский код & 1000.0 & 500.0 &  704.5 & 6500.0 \\
+        Дифф. манч. код   & 1000.0 & 250.0 &  692.0 & 6750.0 \\
+        MLT-3             &  500.0 & 142.9 &  300.0 & 3357.1 \\
+        PAM-5             &  500.0 & 166.7 &  381.8 & 3333.3 \\
     \end{tabular}
 \end{center}
 
