--- a/src/scramble.tex
+++ b/src/scramble.tex
@@ -1,9 +1,191 @@
 \section{Скремблирование}
 $B_i$ для $i\leq 0$ считаем нулями
 \subsection{Формула $B_i=A_i\oplus B_{i-3}\oplus B_{i-5}$}
+
+$B_{1}=A_{1}\oplus B_{-2}\oplus B_{-4}=1\oplus 0\oplus 0=1$\\
+$B_{2}=A_{2}\oplus B_{-1}\oplus B_{-3}=1\oplus 0\oplus 0=1$\\
+$B_{3}=A_{3}\oplus B_{0}\oplus B_{-2}=0\oplus 0\oplus 0=0$\\
+$B_{4}=A_{4}\oplus B_{1}\oplus B_{-1}=1\oplus 1\oplus 0=0$\\
+$B_{5}=A_{5}\oplus B_{2}\oplus B_{0}=0\oplus 1\oplus 0=1$\\
+$B_{6}=A_{6}\oplus B_{3}\oplus B_{1}=0\oplus 0\oplus 1=1$\\
+$B_{7}=A_{7}\oplus B_{4}\oplus B_{2}=0\oplus 0\oplus 1=1$\\
+$B_{8}=A_{8}\oplus B_{5}\oplus B_{3}=1\oplus 1\oplus 0=0$\\
+$B_{9}=A_{9}\oplus B_{6}\oplus B_{4}=1\oplus 1\oplus 0=0$\\
+$B_{10}=A_{10}\oplus B_{7}\oplus B_{5}=1\oplus 1\oplus 1=1$\\
+$B_{11}=A_{11}\oplus B_{8}\oplus B_{6}=1\oplus 0\oplus 1=0$\\
+$B_{12}=A_{12}\oplus B_{9}\oplus B_{7}=1\oplus 0\oplus 1=0$\\
+$B_{13}=A_{13}\oplus B_{10}\oplus B_{8}=0\oplus 1\oplus 0=1$\\
+$B_{14}=A_{14}\oplus B_{11}\oplus B_{9}=0\oplus 0\oplus 0=0$\\
+$B_{15}=A_{15}\oplus B_{12}\oplus B_{10}=1\oplus 0\oplus 1=0$\\
+$B_{16}=A_{16}\oplus B_{13}\oplus B_{11}=1\oplus 1\oplus 0=0$\\
+$B_{17}=A_{17}\oplus B_{14}\oplus B_{12}=1\oplus 0\oplus 0=1$\\
+$B_{18}=A_{18}\oplus B_{15}\oplus B_{13}=1\oplus 0\oplus 1=0$\\
+$B_{19}=A_{19}\oplus B_{16}\oplus B_{14}=1\oplus 0\oplus 0=1$\\
+$B_{20}=A_{20}\oplus B_{17}\oplus B_{15}=1\oplus 1\oplus 0=0$\\
+$B_{21}=A_{21}\oplus B_{18}\oplus B_{16}=0\oplus 0\oplus 0=0$\\
+$B_{22}=A_{22}\oplus B_{19}\oplus B_{17}=0\oplus 1\oplus 1=0$\\
+$B_{23}=A_{23}\oplus B_{20}\oplus B_{18}=0\oplus 0\oplus 0=0$\\
+$B_{24}=A_{24}\oplus B_{21}\oplus B_{19}=0\oplus 0\oplus 1=1$\\
+$B_{25}=A_{25}\oplus B_{22}\oplus B_{20}=1\oplus 0\oplus 0=1$\\
+$B_{26}=A_{26}\oplus B_{23}\oplus B_{21}=1\oplus 0\oplus 0=1$\\
+$B_{27}=A_{27}\oplus B_{24}\oplus B_{22}=1\oplus 1\oplus 0=0$\\
+$B_{28}=A_{28}\oplus B_{25}\oplus B_{23}=0\oplus 1\oplus 0=1$\\
+$B_{29}=A_{29}\oplus B_{26}\oplus B_{24}=1\oplus 1\oplus 1=1$\\
+$B_{30}=A_{30}\oplus B_{27}\oplus B_{25}=0\oplus 0\oplus 1=1$\\
+$B_{31}=A_{31}\oplus B_{28}\oplus B_{26}=1\oplus 1\oplus 1=1$\\
+$B_{32}=A_{32}\oplus B_{29}\oplus B_{27}=0\oplus 1\oplus 0=1$\\
+$B_{33}=A_{33}\oplus B_{30}\oplus B_{28}=1\oplus 1\oplus 1=1$\\
+$B_{34}=A_{34}\oplus B_{31}\oplus B_{29}=1\oplus 1\oplus 1=1$\\
+$B_{35}=A_{35}\oplus B_{32}\oplus B_{30}=1\oplus 1\oplus 1=1$\\
+$B_{36}=A_{36}\oplus B_{33}\oplus B_{31}=0\oplus 1\oplus 1=0$\\
+$B_{37}=A_{37}\oplus B_{34}\oplus B_{32}=1\oplus 1\oplus 1=1$\\
+$B_{38}=A_{38}\oplus B_{35}\oplus B_{33}=0\oplus 1\oplus 1=0$\\
+$B_{39}=A_{39}\oplus B_{36}\oplus B_{34}=0\oplus 0\oplus 1=1$\\
+$B_{40}=A_{40}\oplus B_{37}\oplus B_{35}=0\oplus 1\oplus 1=0$\\
+$B_{41}=A_{41}\oplus B_{38}\oplus B_{36}=1\oplus 0\oplus 0=1$\\
+$B_{42}=A_{42}\oplus B_{39}\oplus B_{37}=1\oplus 1\oplus 1=1$\\
+$B_{43}=A_{43}\oplus B_{40}\oplus B_{38}=1\oplus 0\oplus 0=1$\\
+$B_{44}=A_{44}\oplus B_{41}\oplus B_{39}=1\oplus 1\oplus 1=1$\\
+$B_{45}=A_{45}\oplus B_{42}\oplus B_{40}=0\oplus 1\oplus 0=1$\\
+$B_{46}=A_{46}\oplus B_{43}\oplus B_{41}=0\oplus 1\oplus 1=0$\\
+$B_{47}=A_{47}\oplus B_{44}\oplus B_{42}=0\oplus 1\oplus 1=0$\\
+$B_{48}=A_{48}\oplus B_{45}\oplus B_{43}=1\oplus 1\oplus 1=1$\\
+$B_{49}=A_{49}\oplus B_{46}\oplus B_{44}=0\oplus 0\oplus 1=1$\\
+$B_{50}=A_{50}\oplus B_{47}\oplus B_{45}=0\oplus 0\oplus 1=1$\\
+$B_{51}=A_{51}\oplus B_{48}\oplus B_{46}=1\oplus 1\oplus 0=0$\\
+$B_{52}=A_{52}\oplus B_{49}\oplus B_{47}=0\oplus 1\oplus 0=1$\\
+$B_{53}=A_{53}\oplus B_{50}\oplus B_{48}=0\oplus 1\oplus 1=0$\\
+$B_{54}=A_{54}\oplus B_{51}\oplus B_{49}=0\oplus 0\oplus 1=1$\\
+$B_{55}=A_{55}\oplus B_{52}\oplus B_{50}=0\oplus 1\oplus 1=0$\\
+$B_{56}=A_{56}\oplus B_{53}\oplus B_{51}=0\oplus 0\oplus 0=0$\\
+$B_{57}=A_{57}\oplus B_{54}\oplus B_{52}=1\oplus 1\oplus 1=1$\\
+$B_{58}=A_{58}\oplus B_{55}\oplus B_{53}=1\oplus 0\oplus 0=1$\\
+$B_{59}=A_{59}\oplus B_{56}\oplus B_{54}=0\oplus 0\oplus 1=1$\\
+$B_{60}=A_{60}\oplus B_{57}\oplus B_{55}=0\oplus 1\oplus 0=1$\\
+$B_{61}=A_{61}\oplus B_{58}\oplus B_{56}=0\oplus 1\oplus 0=1$\\
+$B_{62}=A_{62}\oplus B_{59}\oplus B_{57}=0\oplus 1\oplus 1=0$\\
+$B_{63}=A_{63}\oplus B_{60}\oplus B_{58}=0\oplus 1\oplus 1=0$\\
+$B_{64}=A_{64}\oplus B_{61}\oplus B_{59}=0\oplus 1\oplus 1=0$\\
+$B_{65}=A_{65}\oplus B_{62}\oplus B_{60}=0\oplus 0\oplus 1=1$\\
+$B_{66}=A_{66}\oplus B_{63}\oplus B_{61}=0\oplus 0\oplus 1=1$\\
+$B_{67}=A_{67}\oplus B_{64}\oplus B_{62}=1\oplus 0\oplus 0=1$\\
+$B_{68}=A_{68}\oplus B_{65}\oplus B_{63}=0\oplus 1\oplus 0=1$\\
+$B_{69}=A_{69}\oplus B_{66}\oplus B_{64}=1\oplus 1\oplus 0=0$\\
+$B_{70}=A_{70}\oplus B_{67}\oplus B_{65}=1\oplus 1\oplus 1=1$\\
+$B_{71}=A_{71}\oplus B_{68}\oplus B_{66}=1\oplus 1\oplus 1=1$\\
+$B_{72}=A_{72}\oplus B_{69}\oplus B_{67}=0\oplus 0\oplus 1=1$\\
+$B_{73}=A_{73}\oplus B_{70}\oplus B_{68}=1\oplus 1\oplus 1=1$\\
+$B_{74}=A_{74}\oplus B_{71}\oplus B_{69}=1\oplus 1\oplus 0=0$\\
+$B_{75}=A_{75}\oplus B_{72}\oplus B_{70}=0\oplus 1\oplus 1=0$\\
+$B_{76}=A_{76}\oplus B_{73}\oplus B_{71}=0\oplus 1\oplus 1=0$\\
+$B_{77}=A_{77}\oplus B_{74}\oplus B_{72}=1\oplus 0\oplus 1=0$\\
+$B_{78}=A_{78}\oplus B_{75}\oplus B_{73}=0\oplus 0\oplus 1=1$\\
+$B_{79}=A_{79}\oplus B_{76}\oplus B_{74}=0\oplus 0\oplus 0=0$\\
+$B_{80}=A_{80}\oplus B_{77}\oplus B_{75}=0\oplus 0\oplus 0=0$\\
+$B_{81}=A_{81}\oplus B_{78}\oplus B_{76}=0\oplus 1\oplus 0=1$\\
+$B_{82}=A_{82}\oplus B_{79}\oplus B_{77}=0\oplus 0\oplus 0=0$\\
+$B_{83}=A_{83}\oplus B_{80}\oplus B_{78}=1\oplus 0\oplus 1=0$\\
+$B_{84}=A_{84}\oplus B_{81}\oplus B_{79}=0\oplus 1\oplus 0=1$\\
+$B_{85}=A_{85}\oplus B_{82}\oplus B_{80}=1\oplus 0\oplus 0=1$\\
+$B_{86}=A_{86}\oplus B_{83}\oplus B_{81}=1\oplus 0\oplus 1=0$\\
+$B_{87}=A_{87}\oplus B_{84}\oplus B_{82}=1\oplus 1\oplus 0=0$\\
+$B_{88}=A_{88}\oplus B_{85}\oplus B_{83}=0\oplus 1\oplus 0=1$\\
+
 \textbf{Результат:} \texttt{1100 1110 0100 1000 1010 0001 1101 1111 1110 1010 1111 1001 1101 0100 1111 1000 1111 0111 1000 0100 1001 1001}\\
 Этот результат содержит 8 идущих подряд единиц.
+
+
 \subsection{Формула $B_i=A_i\oplus B_{i-5}\oplus B_{i-7}$}
+
+$B_{1}=A_{1}\oplus B_{-4}\oplus B_{-6}=1\oplus 0\oplus 0=1$\\
+$B_{2}=A_{2}\oplus B_{-3}\oplus B_{-5}=1\oplus 0\oplus 0=1$\\
+$B_{3}=A_{3}\oplus B_{-2}\oplus B_{-4}=0\oplus 0\oplus 0=0$\\
+$B_{4}=A_{4}\oplus B_{-1}\oplus B_{-3}=1\oplus 0\oplus 0=1$\\
+$B_{5}=A_{5}\oplus B_{0}\oplus B_{-2}=0\oplus 0\oplus 0=0$\\
+$B_{6}=A_{6}\oplus B_{1}\oplus B_{-1}=0\oplus 1\oplus 0=1$\\
+$B_{7}=A_{7}\oplus B_{2}\oplus B_{0}=0\oplus 1\oplus 0=1$\\
+$B_{8}=A_{8}\oplus B_{3}\oplus B_{1}=1\oplus 0\oplus 1=0$\\
+$B_{9}=A_{9}\oplus B_{4}\oplus B_{2}=1\oplus 1\oplus 1=1$\\
+$B_{10}=A_{10}\oplus B_{5}\oplus B_{3}=1\oplus 0\oplus 0=1$\\
+$B_{11}=A_{11}\oplus B_{6}\oplus B_{4}=1\oplus 1\oplus 1=1$\\
+$B_{12}=A_{12}\oplus B_{7}\oplus B_{5}=1\oplus 1\oplus 0=0$\\
+$B_{13}=A_{13}\oplus B_{8}\oplus B_{6}=0\oplus 0\oplus 1=1$\\
+$B_{14}=A_{14}\oplus B_{9}\oplus B_{7}=0\oplus 1\oplus 1=0$\\
+$B_{15}=A_{15}\oplus B_{10}\oplus B_{8}=1\oplus 1\oplus 0=0$\\
+$B_{16}=A_{16}\oplus B_{11}\oplus B_{9}=1\oplus 1\oplus 1=1$\\
+$B_{17}=A_{17}\oplus B_{12}\oplus B_{10}=1\oplus 0\oplus 1=0$\\
+$B_{18}=A_{18}\oplus B_{13}\oplus B_{11}=1\oplus 1\oplus 1=1$\\
+$B_{19}=A_{19}\oplus B_{14}\oplus B_{12}=1\oplus 0\oplus 0=1$\\
+$B_{20}=A_{20}\oplus B_{15}\oplus B_{13}=1\oplus 0\oplus 1=0$\\
+$B_{21}=A_{21}\oplus B_{16}\oplus B_{14}=0\oplus 1\oplus 0=1$\\
+$B_{22}=A_{22}\oplus B_{17}\oplus B_{15}=0\oplus 0\oplus 0=0$\\
+$B_{23}=A_{23}\oplus B_{18}\oplus B_{16}=0\oplus 1\oplus 1=0$\\
+$B_{24}=A_{24}\oplus B_{19}\oplus B_{17}=0\oplus 1\oplus 0=1$\\
+$B_{25}=A_{25}\oplus B_{20}\oplus B_{18}=1\oplus 0\oplus 1=0$\\
+$B_{26}=A_{26}\oplus B_{21}\oplus B_{19}=1\oplus 1\oplus 1=1$\\
+$B_{27}=A_{27}\oplus B_{22}\oplus B_{20}=1\oplus 0\oplus 0=1$\\
+$B_{28}=A_{28}\oplus B_{23}\oplus B_{21}=0\oplus 0\oplus 1=1$\\
+$B_{29}=A_{29}\oplus B_{24}\oplus B_{22}=1\oplus 1\oplus 0=0$\\
+$B_{30}=A_{30}\oplus B_{25}\oplus B_{23}=0\oplus 0\oplus 0=0$\\
+$B_{31}=A_{31}\oplus B_{26}\oplus B_{24}=1\oplus 1\oplus 1=1$\\
+$B_{32}=A_{32}\oplus B_{27}\oplus B_{25}=0\oplus 1\oplus 0=1$\\
+$B_{33}=A_{33}\oplus B_{28}\oplus B_{26}=1\oplus 1\oplus 1=1$\\
+$B_{34}=A_{34}\oplus B_{29}\oplus B_{27}=1\oplus 0\oplus 1=0$\\
+$B_{35}=A_{35}\oplus B_{30}\oplus B_{28}=1\oplus 0\oplus 1=0$\\
+$B_{36}=A_{36}\oplus B_{31}\oplus B_{29}=0\oplus 1\oplus 0=1$\\
+$B_{37}=A_{37}\oplus B_{32}\oplus B_{30}=1\oplus 1\oplus 0=0$\\
+$B_{38}=A_{38}\oplus B_{33}\oplus B_{31}=0\oplus 1\oplus 1=0$\\
+$B_{39}=A_{39}\oplus B_{34}\oplus B_{32}=0\oplus 0\oplus 1=1$\\
+$B_{40}=A_{40}\oplus B_{35}\oplus B_{33}=0\oplus 0\oplus 1=1$\\
+$B_{41}=A_{41}\oplus B_{36}\oplus B_{34}=1\oplus 1\oplus 0=0$\\
+$B_{42}=A_{42}\oplus B_{37}\oplus B_{35}=1\oplus 0\oplus 0=1$\\
+$B_{43}=A_{43}\oplus B_{38}\oplus B_{36}=1\oplus 0\oplus 1=0$\\
+$B_{44}=A_{44}\oplus B_{39}\oplus B_{37}=1\oplus 1\oplus 0=0$\\
+$B_{45}=A_{45}\oplus B_{40}\oplus B_{38}=0\oplus 1\oplus 0=1$\\
+$B_{46}=A_{46}\oplus B_{41}\oplus B_{39}=0\oplus 0\oplus 1=1$\\
+$B_{47}=A_{47}\oplus B_{42}\oplus B_{40}=0\oplus 1\oplus 1=0$\\
+$B_{48}=A_{48}\oplus B_{43}\oplus B_{41}=1\oplus 0\oplus 0=1$\\
+$B_{49}=A_{49}\oplus B_{44}\oplus B_{42}=0\oplus 0\oplus 1=1$\\
+$B_{50}=A_{50}\oplus B_{45}\oplus B_{43}=0\oplus 1\oplus 0=1$\\
+$B_{51}=A_{51}\oplus B_{46}\oplus B_{44}=1\oplus 1\oplus 0=0$\\
+$B_{52}=A_{52}\oplus B_{47}\oplus B_{45}=0\oplus 0\oplus 1=1$\\
+$B_{53}=A_{53}\oplus B_{48}\oplus B_{46}=0\oplus 1\oplus 1=0$\\
+$B_{54}=A_{54}\oplus B_{49}\oplus B_{47}=0\oplus 1\oplus 0=1$\\
+$B_{55}=A_{55}\oplus B_{50}\oplus B_{48}=0\oplus 1\oplus 1=0$\\
+$B_{56}=A_{56}\oplus B_{51}\oplus B_{49}=0\oplus 0\oplus 1=1$\\
+$B_{57}=A_{57}\oplus B_{52}\oplus B_{50}=1\oplus 1\oplus 1=1$\\
+$B_{58}=A_{58}\oplus B_{53}\oplus B_{51}=1\oplus 0\oplus 0=1$\\
+$B_{59}=A_{59}\oplus B_{54}\oplus B_{52}=0\oplus 1\oplus 1=0$\\
+$B_{60}=A_{60}\oplus B_{55}\oplus B_{53}=0\oplus 0\oplus 0=0$\\
+$B_{61}=A_{61}\oplus B_{56}\oplus B_{54}=0\oplus 1\oplus 1=0$\\
+$B_{62}=A_{62}\oplus B_{57}\oplus B_{55}=0\oplus 1\oplus 0=1$\\
+$B_{63}=A_{63}\oplus B_{58}\oplus B_{56}=0\oplus 1\oplus 1=0$\\
+$B_{64}=A_{64}\oplus B_{59}\oplus B_{57}=0\oplus 0\oplus 1=1$\\
+$B_{65}=A_{65}\oplus B_{60}\oplus B_{58}=0\oplus 0\oplus 1=1$\\
+$B_{66}=A_{66}\oplus B_{61}\oplus B_{59}=0\oplus 0\oplus 0=0$\\
+$B_{67}=A_{67}\oplus B_{62}\oplus B_{60}=1\oplus 1\oplus 0=0$\\
+$B_{68}=A_{68}\oplus B_{63}\oplus B_{61}=0\oplus 0\oplus 0=0$\\
+$B_{69}=A_{69}\oplus B_{64}\oplus B_{62}=1\oplus 1\oplus 1=1$\\
+$B_{70}=A_{70}\oplus B_{65}\oplus B_{63}=1\oplus 1\oplus 0=0$\\
+$B_{71}=A_{71}\oplus B_{66}\oplus B_{64}=1\oplus 0\oplus 1=0$\\
+$B_{72}=A_{72}\oplus B_{67}\oplus B_{65}=0\oplus 0\oplus 1=1$\\
+$B_{73}=A_{73}\oplus B_{68}\oplus B_{66}=1\oplus 0\oplus 0=1$\\
+$B_{74}=A_{74}\oplus B_{69}\oplus B_{67}=1\oplus 1\oplus 0=0$\\
+$B_{75}=A_{75}\oplus B_{70}\oplus B_{68}=0\oplus 0\oplus 0=0$\\
+$B_{76}=A_{76}\oplus B_{71}\oplus B_{69}=0\oplus 0\oplus 1=1$\\
+$B_{77}=A_{77}\oplus B_{72}\oplus B_{70}=1\oplus 1\oplus 0=0$\\
+$B_{78}=A_{78}\oplus B_{73}\oplus B_{71}=0\oplus 1\oplus 0=1$\\
+$B_{79}=A_{79}\oplus B_{74}\oplus B_{72}=0\oplus 0\oplus 1=1$\\
+$B_{80}=A_{80}\oplus B_{75}\oplus B_{73}=0\oplus 0\oplus 1=1$\\
+$B_{81}=A_{81}\oplus B_{76}\oplus B_{74}=0\oplus 1\oplus 0=1$\\
+$B_{82}=A_{82}\oplus B_{77}\oplus B_{75}=0\oplus 0\oplus 0=0$\\
+$B_{83}=A_{83}\oplus B_{78}\oplus B_{76}=1\oplus 1\oplus 1=1$\\
+$B_{84}=A_{84}\oplus B_{79}\oplus B_{77}=0\oplus 1\oplus 0=1$\\
+$B_{85}=A_{85}\oplus B_{80}\oplus B_{78}=1\oplus 1\oplus 1=1$\\
+$B_{86}=A_{86}\oplus B_{81}\oplus B_{79}=1\oplus 1\oplus 1=1$\\
+$B_{87}=A_{87}\oplus B_{82}\oplus B_{80}=1\oplus 0\oplus 1=0$\\
+$B_{88}=A_{88}\oplus B_{83}\oplus B_{81}=0\oplus 1\oplus 1=0$\\
+
 \textbf{Результат:} \texttt{1101 0110 1110 1001 0110 1001 0111 0011 1001 0011 0100 1101 1101 0101 1100 0101 1000 1001 1001 0111 1011 1100}\\
 Этот результат содержит 4 идущих подряд единицы.
 
